--- a/test/static/scss/bootstrap.scss
+++ b/test/static/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
 $primary: #81C408;
-$secondary: #FFB524;
+$secondary: #DC4001;
 $light: #F4F6F8;
 $dark: #45595B;
 
