--- a/test/templates/gpt-test.html
+++ b/test/templates/gpt-test.html
@@ -88,7 +88,7 @@
     </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudere</button>
             </div>
         </div>
     </div>
