--- a/test/templates/login.html
+++ b/test/templates/login.html
@@ -15,7 +15,7 @@
 
         <!-- Icon Font Stylesheet -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
         <link href="static/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
@@ -27,29 +27,75 @@
 
         <!-- Template Stylesheet -->
         <link href="static/css/style.css" rel="stylesheet">
-
         <style>
-            .formLogin {
-            margin-left: 700px;
-            margin-right: 700px;
+        .maxText {
+        height: 100px;
+        }
+        .bg-verde-scuro {
+        background: #014017
+        }
+        .verde-scuro {
+        color: #014017
+        }
+         .bg-verde-medio {
+        background: #33A614
+        }
+        .verde-medio {
+        color: #33A614
+        }
+        .bg-verde-chiaro {
+        background: #68D11F
+        }
+        .verde-chiaro {
+        color: #68D11F
+        }
+        .bg-verde-blu {
+        background: #013832
+        }
+        .verde-blu {
+        color: #013832
+        }
+        .bg-bianco {
+        background: #F2F2F2
+        }
+        .bianco {
+        color: #F2F2F2
+        }
+        .arancione{
+        color: #DC4001
+        }
+        .form-login {
+            width: 560px;
+            height: 260px;
             }
-        </style>
+    </style>
     </head>
 
     <body>
 
-        <!-- Navbar start -->
-<div class="container-fluid fixed-top">
+<!-- Spinner Start -->
+        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+            <div class="spinner-grow text-primary" role="status"></div>
+        </div>
+        <!-- Spinner End -->
+<!-- Navbar start -->
+<div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
+    <div class="container topbar bg-verde-medio d-none d-lg-block">
+                <div class="d-flex justify-content-center">
+                    <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori! 🌱🍎🥦</h5>
+                </div>
+            </div>
+
     <div class="container px-0">
-        <nav class="navbar navbar-light bg-white navbar-expand-xl">
-            <a href="#" class="navbar-brand"><h1 class="text-primary display-6">SpeSana</h1></a>
+        <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
+            <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
             </button>
-            <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
+            <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="/" class="nav-item nav-link">Home</a>
                     <a href="#" class="nav-item nav-link">Categorie</a>
                     <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
@@ -57,12 +103,13 @@
                 <div class="d-flex m-3 me-0">
                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
                             data-bs-toggle="modal" data-bs-target="#searchModal"><i
-                            class="fas fa-search text-primary"></i></button>
+                            class="fas fa-search verde-scuro"></i></button>
                     <div class="nav-item dropdown">
-                        <a type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                            <i class="fas fa-user fa-2x"></i>
+                        <a type="button" class="btn bg-verde-chiaro bianco dropdown-toggle" data-bs-toggle="dropdown"
+                           data-bs-display="static" aria-expanded="false">
+                            <i class="fas fa-user bianco fa-2x"></i>
                         </a>
-                        <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                        <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
                             <a href="/login" class="dropdown-item">Login</a>
                             <a href="#" class="dropdown-item">Il mio profilo</a>
                             <a href="#" class="dropdown-item">Preferiti</a>
@@ -96,7 +143,6 @@
 </div>
 <!-- Modal Search End -->
 
-
     <!-- Single Page Header start -->
     <div class="container-fluid page-header py-5 mb-5">
         <h1 class="text-center text-white display-6">Login</h1>
@@ -107,135 +153,66 @@
     </div>
     <!-- Single Page Header End -->
 
-
-    <!-- Login Start -->
-    <form action="/submit" method="POST" class="formLogin bg-light mt-5" >
-        <div class="d-flex row g-4" style="align-items: center">
-            <div class="col-lg-4 mx-auto">
-                <div class="p-1 rounded mb-2 bg-white">
-                    <div>
-                        <h6>Email</h6>
-                        <input type="text" name="email_login" class="w-100 form-control border-0 py-1 mb-4" required>
+        <!-- Login Start -->
+        <div class="d-flex justify-content-center py-5">
+            <div class="d-flex flex-row bg-verde-chiaro rounded form-login">
+                <form class="col p-3 mt-3 mb-3" style="border-right: 2px solid white">
+                    <h6>Email</h6>
+                    <input type="text" name="email_login" class="w-100 form-control border-0 py-1 mb-4" required>
+                    <h6>Password</h6>
+                    <input type="text" name="password_login" class="w-100 form-control border-0 py-1 mb-4" required>
+                    <button class="w-100 btn form-control border-secondary bg-white text-primary " type="submit">Login</button>
+                </form>
+                <div class="col p-3">
+                    <div class="position-relative mb-2">
+                    <img src="static/imgTest/login_people.png" class="img-fluid rounded" alt="">
+                    <div class="position-absolute" style="top: 80%; right: 10px; transform: translateY(-50%);">
+                        <h4 class="verde-scuro fw-bold">Su misura<br>per te</h4>
                     </div>
                 </div>
-                <div class="p-1 rounded mb-2 bg-white">
-                    <div>
-                        <h6>Password</h6>
-                        <input type="text" name="password_login" class="w-100 form-control border-0 py-1 mb-4" required>
-                    </div>
+                      <a href="/signup" class="w-100 btn btn-secondary border-3 border-secondary bg-verde-scuro text-light">Signup</a>
                 </div>
-                 <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Login</button>
-            </div>
-            <div class="col-lg-4 mx-auto">
-                <div class="position-relative">
-                    <img src="static/imgTest/Carrello.jpg" class="img-fluid w-100 rounded" alt="">
-                    <div class="position-absolute" style="top: 50%; right: 10px; transform: translateY(-50%);">
-                        <h3 class="text-secondary fw-bold">Fresh <br> Fruits <br> Banner</h3>
-                    </div>
-                </div>
-                <a href="/signup" class="w-100 btn form-control border-secondary py-3 bg-white text-primary">Registrati</a>
             </div>
         </div>
-    </form>
-    <!-- Login End -->
+        <!-- Login End -->
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
-        <div class="container py-5">
-            <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
-                <div class="row g-4">
-                    <div class="col-lg-3">
-                        <a href="#">
-                            <h1 class="text-primary mb-0">Fruitables</h1>
-                            <p class="text-secondary mb-0">Fresh products</p>
-                        </a>
+<!-- Footer Start -->
+<div class="container-fluid bg-verde-scuro text-white-50 footer pt-3 mt-5">
+    <div class="container">
+        <div class="pb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
+            <div class="row g-4">
+                <div class="col-lg-3">
+                    <a href="#">
+                        <h1 class="text-light mb-0">SpeSana</h1>
+                        <p class="text-secondary mb-0">Nutri la tua mente e il tuo corpo</p>
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <div class="position-relative text-center mx-auto">
+                        <h5 class="text-light mt-2 mb2">Progetto Finale del corso</h5>
+                        <h5 class="text-light">Jr. Data Engineer - DAITA 12.</h5>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                            <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="d-flex justify-content-end pt-3">
-                            <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="d-flex justify-content-end pt-3">
+                        <img src="static/imgTest/logo-generation.svg">
                     </div>
                 </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">Why People Like us!</h4>
-                        <p class="mb-4">typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
-                        <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Shop Info</h4>
-                        <a class="btn-link" href="">About Us</a>
-                        <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Privacy Policy</a>
-                        <a class="btn-link" href="">Terms & Condition</a>
-                        <a class="btn-link" href="">Return Policy</a>
-                        <a class="btn-link" href="">FAQs & Help</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Account</h4>
-                        <a class="btn-link" href="">My Account</a>
-                        <a class="btn-link" href="">Shop details</a>
-                        <a class="btn-link" href="">Shopping Cart</a>
-                        <a class="btn-link" href="">Wishlist</a>
-                        <a class="btn-link" href="">Order History</a>
-                        <a class="btn-link" href="">International Orders</a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: 1429 Netus Rd, NY 48247</p>
-                        <p>Email: Example@gmail.com</p>
-                        <p>Phone: +0123 4567 8910</p>
-                        <p>Payment Accepted</p>
-                        <img src="img/payment.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-            </div>
+             <h5 class="text-light mt-4 mb-3 text-center">Sviluppato da:</h5>
+            <p class="mb-2 text-center"><a class="text-light text-decoration-underline" href="//www.linkedin.com/in/armando-izaguirre-la-rocca/"> Armando Izaguirre </a>-
+                <a class="text-light text-decoration-underline" href="//www.linkedin.com/in/benedetta-aversano/"> Benedetta Aversano </a>-
+                <a class="text-light text-decoration-underline" href="//www.linkedin.com/in/marco-de-sio-5b87b7196/"> Marco de Sio </a>-
+                <a class="text-light text-decoration-underline" href="//www.linkedin.com/in/stefano-crivella/"> Stefano Crivella </a>-
+                <a class="text-light text-decoration-underline" href="//www.linkedin.com/in/riccardo-benedetti-44aa70299/"> Riccardo Benedetti </a>
+
+
+
         </div>
     </div>
-    <!-- Footer End -->
-
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
-                </div>
-                <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright End -->
-
-
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
-
+</div>
+<!-- Footer End -->
         
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
