--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -141,7 +141,7 @@
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
                     <a href="#" class="nav-item nav-link">Categorie</a>
-                    <a href="/product" class="nav-item nav-link">Prodotti</a>
+                    <a href="/prodotti" class="nav-item nav-link">Prodotti</a>
                     <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
                 </div>
                 <div class="d-flex m-3 me-0">
