--- a/test/templates/nutriscore.html
+++ b/test/templates/nutriscore.html
@@ -158,11 +158,22 @@
 
 <body>
 
+<!-- Spinner Start -->
+<!--<div id="spinner"-->
+<!--     class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">-->
+<!--    <div class="spinner-grow text-primary" role="status"></div>-->
+<!--</div>-->
+<!--&lt;!&ndash; Spinner End &ndash;&gt;-->
 
 {% if flagLog == False %}
 <!-- Navbar start senza essere loggati -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
-
+<!--    <div class="container topbar bg-verde-medio d-none d-lg-block">-->
+<!--        <div class="d-flex justify-content-center">-->
+<!--            <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori!-->
+<!--                🌱🍎🥦</h5>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
             <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
@@ -200,7 +211,12 @@
 
 <!-- Navbar start login -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
-
+<!--    <div class="container topbar bg-verde-medio d-none d-lg-block">-->
+<!--        <div class="d-flex justify-content-center">-->
+<!--            <h5 class="text-light">Siamo un marchio che ispira e guida le persone verso scelte alimentari migliori!-->
+<!--                🌱🍎🥦</h5>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
             <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
@@ -254,11 +270,7 @@
             <div class="container py-5 text-center">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <i class="bi bi-exclamation-triangle display-1 text-secondary"></i>
-                        <h1 class="display-1">404</h1>
-                        <h1 class="mb-4">Page Not Found</h1>
-                        <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                        <a class="btn border-secondary rounded-pill py-3 px-5" href="index.html">Go Back To Home</a>
+
                     </div>
                 </div>
             </div>
